--- a/select_store_sales2026.html
+++ b/select_store_sales2026.html
@@ -116,6 +116,7 @@
         .store-card:nth-child(18) .store-icon { color: #2c3e50; }
         .store-card:nth-child(19) .store-icon { color: #3498db; }
         .store-card:nth-child(20) .store-icon { color: #e84393; }
+		.store-card:nth-child(21) .store-icon { color: #e84393; }
 
         /* Warna berbeda untuk garis atas */
         .store-card:nth-child(1)::before { background: #e74c3c; }
@@ -138,6 +139,8 @@
         .store-card:nth-child(18)::before { background: #2c3e50; }
         .store-card:nth-child(19)::before { background: #3498db; }
         .store-card:nth-child(20)::before { background: #e84393; }
+		.store-card:nth-child(21)::before { background: #e84393; }
+
 
         @media (max-width: 768px) {
             .dashboard {
@@ -159,122 +162,128 @@
     </div>
 
     <div class="dashboard">
+		<!-- AREA 2 - Ikon landmark bersejarah -->
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1H20zEy9fcpn5_kIO1pp84_0t55D6g5hP/edit?usp=sharing&ouid=105850800277277443809&rtpof=true&sd=true', '_blank')">
+            <i class="fa-brands fa-accusoft"></i>
+            <div class="store-name">Rekap Monitoring Sales Area 2</div>
+        </div>
+
         <!-- Sabang - Ikon landmark bersejarah -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/12j_5awYYM_Z00mZqPblxerdI5qQ82muzCaOZP9LUuKw/edit?usp=sharing', '_blank')">
             <i class="fas fa-landmark store-icon"></i>
             <div class="store-name">Sabang</div>
         </div>
 
         <!-- Gambir - Ikon stasiun kereta -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/14l_fRZ-zT1P4Pz2FAKBVXfDfRu6FqvMPtSd0OcAAzsg/edit?usp=sharing', '_blank')">
             <i class="fas fa-subway store-icon"></i>
             <div class="store-name">Gambir</div>
         </div>
 
         <!-- Atrium - Ikon mal modern -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/18qdKg3u8c8HxKShSn4Q8V9_mS32RsJ9dhnfrWaewZkE/edit?usp=sharing', '_blank')">
             <i class="fas fa-store store-icon"></i>
             <div class="store-name">Atrium</div>
         </div>
 
         <!-- Mangga Dua Mall - Ikon elektronik/bargain -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1OhrXIsoCf69_X6d3xT6vXgHGsCU8NR838EsaYOaGVtI/edit?usp=sharing', '_blank')">
             <i class="fas fa-tags store-icon"></i>
             <div class="store-name">Mangga Dua</div>
         </div>
 
         <!-- PRJ - Ikon festival/pameran -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1Ut5KR6z_U_--mfpTXj1lVq47XQUcpZr5fYVNtW2FrNo/edit?usp=sharing', '_blank')">
             <i class="fas fa-flag-checkered store-icon"></i>
             <div class="store-name">PRJ</div>
         </div>
 
         <!-- Cempaka Mas - Ikon mall dengan pohon -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1F1uv6tE4PXiZE9RvHL_kYPenjxDl7144JRaUyh9pv9Q/edit?usp=sharing', '_blank')">
             <i class="fas fa-tree store-icon"></i>
             <div class="store-name">Cempaka Mas</div>
         </div>
 
         <!-- Roxy Mas - Ikon fashion/shopping -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/13dD_fGcnW8yai0HW_--zuyWTjQMvvPbRBrJuJ8WNuis/edit?usp=sharing', '_blank')">
             <i class="fas fa-tshirt store-icon"></i>
             <div class="store-name">Roxy Mas</div>
         </div>
 
         <!-- Ruko Benhil - Ikon ruko/shopping complex -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1KDQxbdvJEDUkyfvQhysH3tC5qlha-DI71Nt0xvXmzsY/edit?usp=sharing', '_blank')">
             <i class="fas fa-city store-icon"></i>
             <div class="store-name">Ruko Benhil</div>
         </div>
 
         <!-- Ruko Rawasari - Ikon bangunan perkantoran -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1Kke1GercCTRhYIuqaina6zp9sSSZyLdhdFJF8rZz1dg/edit?usp=sharing', '_blank')">
             <i class="fas fa-building-columns store-icon"></i>
             <div class="store-name">Ruko Rawasari</div>
         </div>
 
         <!-- Gajah Mada Plaza - Ikon plaza tua/klasik -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1rotOyEcQCZkOMF06jvgtuL7DRX34ONEQnKjKuI3Ui5E/edit?usp=sharing', '_blank')">
             <i class="fas fa-monument store-icon"></i>
             <div class="store-name">Gajah Mada</div>
         </div>
 
         <!-- FX Sudirman - Ikon gedung perkantoran modern -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1SxowozR0tf9BaybkvDqCCO7AqGO-3NIL7gv1UvZfuLI/edit?usp=sharing', '_blank')">
             <i class="fas fa-building store-icon"></i>
             <div class="store-name">FX Sudirman</div>
         </div>
 
         <!-- Plaza Senayan - Ikon mall mewah -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1N2axZ5-8SM_GiSTP_t_bRfF3UOICgKmaUMN_bNjC-RQ/edit?usp=sharing', '_blank')">
             <i class="fas fa-gem store-icon"></i>
             <div class="store-name">Plaza Senayan</div>
         </div>
 
         <!-- Grand Indonesia - Ikon mall besar/luxury -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1TYf_0xiutDQOWIPEx_EHs_hSxdpr1k3JZeeE6SUbKbY/edit?usp=sharing', '_blank')">
             <i class="fas fa-crown store-icon"></i>
             <div class="store-name">Grand Indonesia</div>
         </div>
 
 	<!-- Menteng Huis - Ikon rumah Belanda/taman -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1mbF0VLcWSw1fZnm-hf2MuIXZiMn-8n5WMszgTQxbnh8/edit?usp=sharing', '_blank')">
             <i class="fas fa-house-chimney store-icon"></i>
             <div class="store-name">Menteng Huis</div>
         </div>
 
         <!-- Green Pramuka Square - Ikon mall hijau/ramah lingkungan -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1pHFm-prurfpdmHeupaaIexPy7uJY65B19v5rUGhYFTg/edit?usp=sharing', '_blank')">
             <i class="fas fa-leaf store-icon"></i>
             <div class="store-name">Green Pramuka</div>
         </div>
 
         <!-- Cideng - Ikon area perkotaan -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('chttps://docs.google.com/spreadsheets/d/1UjL8scFg9P9oktisj4D3NYAN_ajYW5JTVNF1CTJB0kg/edit?usp=sharing', '_blank')">
             <i class="fas fa-map-marker-alt store-icon"></i>
-            <div class="store-name">Cideng</div>
+            <div class="store-name">HBK Cideng</div>
         </div>
 
         <!-- RS St Carolus - Ikon rumah sakit -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1qM2eYVEeo4FGobLIwEQycLELv8LrqweuzPpvQoZbTIY/edit?usp=sharing', '_blank')">
             <i class="fas fa-hospital-alt store-icon"></i>
             <div class="store-name">RS St Carolus</div>
         </div>
 
         <!-- Transmart Cempaka - Ikon supermarket -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/11NHF4ZlaO6EQ5MUuEENctpAn6zE783ZSV-91FuHqtIA/edit?usp=sharing', '_blank')">
             <i class="fas fa-shopping-bag store-icon"></i>
             <div class="store-name">Transmart</div>
         </div>
 
         <!-- Ruko Pecenongan - Ikon ruko tua -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1FZq1DWRX4feaQbaMHIdBjWzn7QyOVH1EyoHH0cqRenM/edit?usp=sharing', '_blank')">
             <i class="fas fa-warehouse store-icon"></i>
             <div class="store-name">Ruko Pecenongan</div>
         </div>
 
         <!-- Senayan City - Ikon mall high-end -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1HjlSK857BGh4MmQeEn-mGzmetDSkhqBtrsF5uNFiV1c/edit?usp=sharing', '_blank')">
             <i class="fas fa-star store-icon"></i>
             <div class="store-name">Senayan City</div>
         </div>
