--- a/select_store_sales2026.html
+++ b/select_store_sales2026.html
@@ -164,7 +164,7 @@
     <div class="dashboard">
 		<!-- AREA 2 - Ikon landmark bersejarah -->
         <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1H20zEy9fcpn5_kIO1pp84_0t55D6g5hP/edit?usp=sharing&ouid=105850800277277443809&rtpof=true&sd=true', '_blank')">
-            <i class="fa-brands fa-accusoft"></i>
+             <i class="fas fa-trophy store-icon"></i>
             <div class="store-name">Rekap Monitoring Sales Area 2</div>
         </div>
 
