--- a/select_store_sales2026.html
+++ b/select_store_sales2026.html
@@ -259,7 +259,7 @@
         </div>
 
         <!-- Cideng - Ikon area perkotaan -->
-        <div class="store-card" onclick="window.open('chttps://docs.google.com/spreadsheets/d/1UjL8scFg9P9oktisj4D3NYAN_ajYW5JTVNF1CTJB0kg/edit?usp=sharing', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1UjL8scFg9P9oktisj4D3NYAN_ajYW5JTVNF1CTJB0kg/edit?usp=sharing', '_blank')">
             <i class="fas fa-map-marker-alt store-icon"></i>
             <div class="store-name">HBK Cideng</div>
         </div>
