--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <div class="report-title">Monitoring sales harian 2026 - Area 2</div>
                 </a>
                 
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <!--<a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-2"><i class="fas fa-map-marked-alt"></i></div>
                     <div class="report-title">Monitoring sales harian regional 2026</div>
                 </a>
@@ -236,7 +236,7 @@
                 <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-4"><i class="fas fa-user-shield"></i></div>
                     <div class="report-title">Kontrol PEP harian 2026</div>
-                </a>
+                </a>-->
                 
                 <a href="https://hws.hokben.net:888/login.aspx" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-5"><i class="fas fa-bug"></i></div>
