--- a/month_doi_2026_pusat.html
+++ b/month_doi_2026_pusat.html
@@ -113,7 +113,7 @@
     
     <div class="months-container">
         <!-- Januari -->
-        <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/vici_febriana_hokben_co_id/IQCX9iyhFQiGRZ4MxWcw72LsAdkL7v66W_DZBjkclKLdRs8?e=8a4hfm" class="month-card januari">
+        <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/fariz_kamal_hokben_co_id/IQCVW3O-YdDMSJ8iplVqrcrGAVBzAd1S-oIKmVO2USiLynA?e=D8LZi1" class="month-card januari">
             <div class="month-icon">
                 <i class="fas fa-snowflake"></i>
             </div>
