--- a/select_store_modal2026.html
+++ b/select_store_modal2026.html
@@ -160,13 +160,13 @@
 
     <div class="dashboard">
         <!-- Sabang - Ikon landmark bersejarah -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1BwygA5CDkkiRFQnyNDjlk-g5SHeuWcIxGlxpSxq2ItI/edit?usp=sharing', '_blank')">
             <i class="fas fa-landmark store-icon"></i>
             <div class="store-name">Sabang</div>
         </div>
 
         <!-- Gambir - Ikon stasiun kereta -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1OUE5BcSH9xnqI295J1MK1jsjMVK53Ty66r_Y3BHLCcA/edit?usp=sharing', '_blank')">
             <i class="fas fa-subway store-icon"></i>
             <div class="store-name">Gambir</div>
         </div>
@@ -202,13 +202,13 @@
         </div>
 
         <!-- Ruko Benhil - Ikon ruko/shopping complex -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1HuyGuCJabG4hPnaNnPhQmX7tSJ418soXF7ijX7dWPxg/edit?usp=sharing', '_blank')">
             <i class="fas fa-city store-icon"></i>
             <div class="store-name">Ruko Benhil</div>
         </div>
 
         <!-- Ruko Rawasari - Ikon bangunan perkantoran -->
-        <div class="store-card" onclick="window.open('commingsoon.html', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/11mFWZemr3Ow28KkQWFHZ26-Ap5ZJrIijCmgte2xhMgs/edit?usp=sharing', '_blank')">
             <i class="fas fa-building-columns store-icon"></i>
             <div class="store-name">Ruko Rawasari</div>
         </div>
@@ -236,7 +236,11 @@
             <i class="fas fa-crown store-icon"></i>
             <div class="store-name">Grand Indonesia</div>
         </div>
-
+        <!-- Menteng Huis - Ikon mall besar/luxury -->
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1Yuo46ZbpFyoD9XNTgstGvUMSidA-Xail2B_E8MymVeI/edit?usp=sharing', '_blank')">
+            <i class="fas fa-home store-icon"></i>
+            <div class="store-name">Menteng Huis</div>
+        </div>
         <!-- Green Pramuka Square - Ikon mall hijau/ramah lingkungan -->
         <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1Hv79HwVZDdWk7l8NQC2bU5AhHHgJv0ji1jNrQ4oIMJc/edit?usp=sharing', '_blank')">
             <i class="fas fa-leaf store-icon"></i>
