--- a/select_store_modal2026.html
+++ b/select_store_modal2026.html
@@ -160,6 +160,11 @@
 
     <div class="dashboard">
         <!-- Sabang - Ikon landmark bersejarah -->
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1pPtHnYrTAwFjBdeYf2v8Kst2B5CQxlRo9XJJTrJOml0/edit?usp=sharing', '_blank')">
+            <i class="fas fa-check store-icon"></i>
+            <div class="store-name">Rekap Kontrol Kesesuaian Modal Store</div>
+        </div>
+        <!-- Sabang - Ikon landmark bersejarah -->
         <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1BwygA5CDkkiRFQnyNDjlk-g5SHeuWcIxGlxpSxq2ItI/edit?usp=sharing', '_blank')">
             <i class="fas fa-landmark store-icon"></i>
             <div class="store-name">Sabang</div>
