--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
         </form>
         
         <div style="margin-top: 30px; font-size: 0.85rem; color: var(--gray-color);">
-            <p><i class="fas fa-info-circle"></i> Use password: <strong>hokben2026</strong></p>
+            <p><i class="fas fa-info-circle"></i>update : <strong>v1.0126</strong></p>
         </div>
     </div>
 
