--- a/index.html
+++ b/index.html
@@ -1341,12 +1341,12 @@
         // Reminder data - EDITABLE
         let reminders = JSON.parse(localStorage.getItem('dashboardReminders')) || [
             { 
-                text: "⚠️ DOI /LPB harian diisi setiap hari max jam 9 pagi!", 
+                text: "⚠️ DOI /LPB harian diisi after closing!", 
                 icon: "fas fa-calendar-exclamation",
                 type: "urgent"
             },
             { 
-                text: "📊 Jangan lupa update sales report setiap jam 9:00 pagi", 
+                text: "📊 Jangan lupa update sales report after closing", 
                 icon: "fas fa-chart-line",
                 type: "important"
             },
