--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
         <div class="login-logo">
             <i class="fas fa-chart-line"></i>
         </div>
-        <h1 class="login-title">Report Dashboard 2026</h1>
+        <h1 class="login-title">Report Dashboard Area 2</h1>
         <p class="login-subtitle">Enter password to access the dashboard</p>
         
         <form class="login-form" id="loginForm">
@@ -1082,7 +1082,7 @@
     <!-- Dashboard -->
     <div class="dashboard-container" id="dashboardContainer">
         <header>
-            <h1>Report Dashboard 2026</h1>
+            <h1>Report Dashboard Area 2</h1>
             <p class="welcome-text">Access all your reports and analytics in one place</p>
         </header>
 
