--- a/index.html
+++ b/index.html
@@ -1167,17 +1167,29 @@
         <!-- Monthly Report -->
         <div id="monthly" class="tab-content">
             <div class="dashboard-grid">
+                <a href="select_month_iquest.html" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon monthly-1"><i class="fas fa-tags"></i></div>
+                    <div class="report-title">Database I-Quest 2026</div>
+                </a>
+                <a href="select_month_ssreport.html" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon monthly-2"><i class="fas fa-book"></i></div>
+                    <div class="report-title">Database SS Report 2026</div>
+                </a>
+                <a href="select_month_qcc.html" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon monthly-3"><i class="fas fa-check-square"></i></div>
+                    <div class="report-title">Database QCC 2026</div>
+                </a>
                 <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon monthly-1"><i class="fas fa-database"></i></div>
+                    <div class="report-icon monthly-4"><i class="fas fa-database"></i></div>
                     <div class="report-title">Database Performance 2026</div>
                 </a>
 
                 <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon monthly-2"><i class="fas fa-bullseye"></i></div>
+                    <div class="report-icon monthly-5"><i class="fas fa-bullseye"></i></div>
                     <div class="report-title">Restaurant Monthly Objektif 2026 (RMO)</div>
                 </a>
                 <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon monthly-8"><i class="fas fa-binoculars"></i></div>
+                    <div class="report-icon monthly-6"><i class="fas fa-binoculars"></i></div>
                     <div class="report-title">Area 2 - Report Audit QSC 2026</div>
                 </a>
             </div>
