--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,7 @@
         <!-- Monthly Report -->
         <div id="monthly" class="tab-content">
             <div class="dashboard-grid">
-                <a href="select_month_iquest.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="select_store_iquest_2026.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon monthly-1"><i class="fas fa-tags"></i></div>
                     <div class="report-title">Database I-Quest 2026</div>
                 </a>
