--- a/index.html
+++ b/index.html
@@ -1167,17 +1167,10 @@
         <!-- Monthly Report -->
         <div id="monthly" class="tab-content">
             <div class="dashboard-grid">
-                <a href="select_store_iquest_2026.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon monthly-1"><i class="fas fa-tags"></i></div>
-                    <div class="report-title">Database I-Quest 2026</div>
+                    <div class="report-title">Database IMPROVEMENT 2026</div>
                 </a>
-                <a href="select_month_ssreport.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon monthly-2"><i class="fas fa-book"></i></div>
-                    <div class="report-title">Database SS Report 2026</div>
-                </a>
-                <a href="select_month_qcc.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon monthly-3"><i class="fas fa-check-square"></i></div>
-                    <div class="report-title">Database QCC 2026</div>
                 </a>
                 <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon monthly-4"><i class="fas fa-database"></i></div>
