--- a/index.html
+++ b/index.html
@@ -1169,7 +1169,7 @@
             <div class="dashboard-grid">
                 <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon monthly-1"><i class="fas fa-tags"></i></div>
-                    <div class="report-title">Database IMPROVEMENT 2026</div>
+                    <div class="report-title">DATABASE IMPROVEMENT 2026</div>
                 </a>
                 </a>
                 <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
