Update February link to external SharePoint resource

--- a/month_doi_2026_pusat.html
+++ b/month_doi_2026_pusat.html
@@ -121,7 +121,7 @@
         </a>
         
         <!-- Februari -->
-        <a href="commingsoon.html" class="month-card februari">
+        <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/fariz_kamal_hokben_co_id/IQAU6tf0UQ2vTYd93TqwSBpUAQeTQQEuT8c3_Fg-QAMS3zU?e=qkoPMk" class="month-card februari">
             <div class="month-icon">
                 <i class="fas fa-heart"></i>
             </div>
