--- a/index.html
+++ b/index.html
@@ -1108,44 +1108,48 @@
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid"> 
                 <a href="dashoboard2025.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-13"><i class="fas fa-dashboard"></i></div>
+                    <div class="report-icon daily-1"><i class="fas fa-dashboard"></i></div>
                     <div class="report-title">Dashboard 2025</div>
                 </a>
                 <a href="month_qaindex_2026.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-15"><i class="fas fa-list-alt"></i></div>
+                    <div class="report-icon daily-2"><i class="fas fa-list-alt"></i></div>
                     <div class="report-title">QA Index 2026</div>
                 </a>                
                 <a href="select_store_modal2026.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
+                    <div class="report-icon daily-3"><i class="fas fa-address-book"></i></div>
                     <div class="report-title">Laporan Modal TMS 2026</div>
                 </a>
                 <a href="https://ekabogainti-my.sharepoint.com/:f:/g/personal/arinto_purnomo_hokben_co_id/IgDdiB4V4nxKQbuhWCuZxSNAAfxhhGfLK_qLgjwB7ylLCsE?e=wAUfVg" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-13"><i class="fas fa-upload"></i></div>
+                    <div class="report-icon daily-4"><i class="fas fa-upload"></i></div>
                     <div class="report-title">Upload Laporan Serah Terima Modal Store 2026</div>
                 </a>
                 <a href="select_store_sales2026.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-1"><i class="fas fa-chart-line"></i></div>
+                    <div class="report-icon daily-5"><i class="fas fa-chart-line"></i></div>
                     <div class="report-title">Monitoring sales harian 2026 - Area 2</div>
                 </a>
 
                 <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hernawati_hokben_co_id/IQDHSKi3DInURZaYWymBZpI4AV9hynGKLVJjm3I5agyJllI?e=1z16UC" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-2"><i class="fas fa-map-marked-alt"></i></div>
+                    <div class="report-icon daily-6"><i class="fas fa-map-marked-alt"></i></div>
                     <div class="report-title">Monitoring sales harian regional 2026</div>
                 </a>
 
                 <a href="https://hws.hokben.net:888/login.aspx" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-5"><i class="fas fa-bug"></i></div>
+                    <div class="report-icon daily-7"><i class="fas fa-bug"></i></div>
                     <div class="report-title">Pest Control management</div>
                 </a>
 
                 <a href="month_doi_2026.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-6"><i class="fas fa-boxes"></i></div>
+                    <div class="report-icon daily-8"><i class="fas fa-boxes"></i></div>
                     <div class="report-title">Monitoring Day Of Inventory 2026 (DOI Area 2)</div>
                 </a>
 
                 <a href="month_doi_2026_pusat.html" class="report-card" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-11"><i class="fas fa-layer-group"></i></div>
+                    <div class="report-icon daily-9"><i class="fas fa-layer-group"></i></div>
                     <div class="report-title">DOI / LPB Operasional 2026</div>
+                </a>
+                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon daily-10"><i class="fas fa-abacus"></i></div>
+                    <div class="report-title">Daily Preparation Chart</div>
                 </a>
             </div>
         </div>
