--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,7 @@
                     <div class="report-icon daily-9"><i class="fas fa-layer-group"></i></div>
                     <div class="report-title">DOI / LPB Operasional 2026</div>
                 </a>
-                <a href="https://docs.google.com/spreadsheets/d/1EVGHoi0OW4rZj1LkCPP0Qdd0wHDoq64H/edit?usp=sharing&ouid=104956695162123697923&rtpof=true&sd=true" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://docs.google.com/spreadsheets/d/18EsG58rwccoWU6TPuhAxZJWXGdGew2P-kZtGlD1WeO0/edit?usp=sharing" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-11"><i class="fas fa-cubes"></i></div>
                     <div class="report-title">Daily Preparation Chart</div>
                 </a>
